# supermarketsales

./: 1_🏠_home.py  pyproject.toml  requirements.txt
pages/: 2_📊_analisys.py
